--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   font-family: 'Montserrat', 'Nunito', sans-serif;
   background-color: #fafafa;
   color: #222222;
