--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Montserrat', 'Nunito', sans-serif;
+  font-family: 'Montserrat', 'Nunito', 'Roboto', sans-serif;
   background-color: #fafafa;
   color: #222222;
 }
