fix: prettier warnings

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -3,7 +3,7 @@
   height: 30px;
   border: none;
   border-radius: 10px;
-  color: #FFF;
+  color: #fff;
   text-align: center;
   font-family: Montserrat;
   font-size: 12px;
@@ -18,9 +18,9 @@
 }
 
 .shamrock {
-  background-color: #2EE5AC;
+  background-color: #2ee5ac;
 }
 
 .grey49 {
-  background-color: #7D7D7D;
+  background-color: #7d7d7d;
 }
