--- a/src/components/Row/Row.module.css
+++ b/src/components/Row/Row.module.css
@@ -6,7 +6,8 @@
   align-items: center;
   justify-content: space-between;
   background-color: #ffffff;
-  border-left: 4px solid #E14165;
+  border-left: 4px solid;
+  border-color: #E14165;
   border-radius: 3px;
   padding: 15px;
 }
@@ -15,6 +16,18 @@
   cursor: pointer;
   border-radius: 3px;
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
+}
+
+.brdcolor1 {
+  border-color: #E14165;
+}
+
+.brdcolor2 {
+  border-color: #C2C2FF;
+}
+
+.brdcolor3 {
+  border-color: #8686FF;
 }
 
 .namecol {
@@ -43,6 +56,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-transform: capitalize;
 }
 
 .statcol {
@@ -57,6 +71,23 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  text-transform: capitalize;
+}
+
+.statdraft {
+  color: #5C5C5C;
+}
+
+.statonline {
+  color: #1BDA9D;
+}
+
+.statpaused {
+  color: #FF8346;
+}
+
+.statstopped{
+  color: #FE4848;
 }
 
 .sitecol {
