--- a/src/components/Results/Results.module.css
+++ b/src/components/Results/Results.module.css
@@ -1,10 +1,10 @@
 .results {
   width: 100%;
-  min-height: 545px;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 30px;
+  gap: 5px;
 }
