fix: prettier warnings

--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -5,7 +5,7 @@
   border-width: 24px;
   border-radius: 50%;
   border-style: solid;
-  border-color: #EBEBEB;
+  border-color: #ebebeb;
   background-color: transparent;
   border-right-color: transparent;
   -webkit-animation: 1s linear infinite spiner;
