--- a/src/components/Sort/Sort.module.css
+++ b/src/components/Sort/Sort.module.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .name {
